re PR c++/29043 (Constructor for POD type with const member without member initializer accepted)

PR c++/29043
	* init.c (perform_member_init): check for uninitialized const or
	reference members, including array types.

From-SVN: r158817